# brew-adoption-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  brew-adoption-audit.py  pyproject.toml
.github/workflows/: ci.yml 
brew_adoption_audit/: __init__.py  aliases.py  appstore.py  artifacts.py  audit.py  brew.py  bundle.py  cli.py  confidence.py  models.py  recommendation.py  reporting.py  shell.py
docs/: algorithm.md  architecture.md  examples.md  safety.md
scripts/: setup-dev.py
tests/: test_artifacts.py  test_confidence.py  test_recommendation.py  test_shell.py
