[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "brew-adoption-audit"
version = "0.2.0"
description = "Read-only audit of macOS applications against Homebrew casks."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Jan Pospisil" }]
keywords = ["macos", "homebrew", "cask", "audit", "applications"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
brew-adoption-audit = "brew_adoption_audit.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8"
]

[tool.hatch.build.targets.wheel]
packages = ["brew_adoption_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
